feat: first commit

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,10 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.btn-main {
+  background-color: #C8023F;
+  color: #fff;
+  padding: 10px 14px;
+  border-radius: 5px;
+}
